# kbmv

./: README.md  meson.build
examples/: awsd.toml
src/: config.cpp  config.hpp  input.cpp  input.hpp  keys.cpp  keys.hpp  layout.cpp  layout.hpp  main.c  main.cpp  main.hpp  meson.build  window.cpp  window.hpp
